# dual_arm_panda_v2

./: README.md
dual_arm_description/: CMakeLists.txt  package.xml
dual_arm_description/urdf/: dual_panda.urdf.xacro
dual_arm_moveit_config/: CMakeLists.txt  dual_arm_control.py  dual_arm_task.py  package.xml
dual_arm_moveit_config/config/: controllers.yaml  dual_panda.srdf  fake_controllers.yaml  initial_positions.yaml  kinematics.yaml  ompl_planning.yaml
dual_arm_moveit_config/launch/: demo.launch.py  mock_hardware.py  virtual_joint_driver.py
franka_description/robots/: hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro
