<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration for dual arms</description>
  <maintainer email="xiqingshang9@gmail.com">lidio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- === 核心依赖：告诉 ROS 运行这个包需要哪些组件 === -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  
  <!-- === 机器人描述依赖 === -->
  <exec_depend>dual_arm_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- === 常用工具依赖 === -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
